# solana-moralis-example

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml
.github/workflows/: build.yml
.sqlx/: query-00d91c3fd4cf5899d82fb4ef8d2cd61a456237e21f7c6181dbabe8720cba1d19.json  query-68073fb4815dab309c28f17975118c972075006a19ea5abe544dc1643a0f338c.json  query-8395b6562226e1c775d578ebe20e7dc2c26854c89a7f6fc3a63fe8490a7a54b2.json
db/: script.sql
src/: db.rs  lib.rs  main.rs  routes.rs
src/commands/users/: create_user_command.rs  delete_user_command.rs  mod.rs  update_user_command.rs
src/controllers/: health_controller.rs  ip_controller.rs  mod.rs  moralis_controller.rs  user_controller.rs
src/dtos/: mod.rs
src/dtos/moralis/responses/: mod.rs  token_price_response.rs
src/handlers/commands/: handle_create_user.rs  handle_delete_user.rs  handle_update_user.rs  mod.rs
src/handlers/queries/: handle_get_all_users.rs  handle_get_user_by_id.rs  mod.rs
src/handlers/queries/moralis/: handle_get_sol_price.rs  handle_get_token_price.rs  mod.rs
src/models/: user.rs
src/queries/users/: get_user_by_id_query.rs  mod.rs
tests/: another_tests.rs  math_tests.rs
